# veratrace-ingestion

./: .gitignore  README.md  SANDBOX.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: contract-tests.yml  deploy.yml
deploy/: refresh-sf-token.sh
sandbox/: README.md  contact-flow-definition.json  lex-bot-definition.json  sandbox-lex-stack.yaml
sql/: stats_views.sql  sync_runs.sql
src/: config.py  main.py
src/connectors/: base.py
src/connectors/amazon_connect/: connector.py
src/connectors/freshdesk/: VENDOR.md  __init__.py  connector.py  schema.py  signal_mapper.py
src/connectors/genesys/: VENDOR.md  __init__.py  connector.py  schema.py  signal_mapper.py
src/connectors/intercom/: VENDOR.md  __init__.py  connector.py  schema.py  signal_mapper.py
src/connectors/salesforce/: VENDOR.md  __init__.py  connector.py  schema.py  signal_mapper.py
src/runtime/: cursor_manager.py  log.py  rate_limiter.py  region_router.py  retry_engine.py  schema_validator.py  signal_writer.py  sync_runs.py  task_trigger.py
src/sync/: scheduler.py
synthetic/: generator.py  seed_servicenow.py  warm.py
synthetic/warmers/: amazon_connect.py  freshdesk.py  genesys.py  salesforce.py  servicenow.py
tests/: conftest.py  test_api_auth.py  test_blog_approve.py  test_platform.py  test_scheduler_registry.py  test_stats_endpoints.py  test_warmers.py
tests/contract/: test_integration_accounts_registry.py  test_rls_enabled.py
tests/test_connectors/: test_freshdesk.py  test_genesys.py  test_intercom.py  test_salesforce.py  test_servicenow.py
(+27 files in other folders)
