[project]
name = "veratrace-ingestion"
version = "0.1.0"
description = "Enterprise integration service — connects vendor APIs and produces TwuSignals"
requires-python = ">=3.9"
dependencies = ["boto3>=1.42.88"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
seed = ["psycopg2-binary>=2.9"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
